# cryonics-community-dioxus

./: Cargo.toml  Dioxus.toml  LICENSE.txt  README.md  package-lock.json  package.json  rustfmt.toml
assets/: stylesheet.css
src/: lib.rs  main.rs  route.rs
src/component/: about.rs  colophon.rs  footer.rs  home.rs  mod.rs  nav.rs  template.rs
src/components/: about.rs  colophon.rs  footer.rs  home.rs  mod.rs  nav.rs  template.rs
