[package]
authors = ["Cryonics Community Contributors"]
description = "Cryonics Community website implemented using Dioxus"
edition = "2024"
homepage = "https://www.CryonicsCommunity.org/"
license = "MIT"
name = "cryonics-community-dioxus"
publish = false
readme = "README.md"
repository = "https://github.com/cryonicscommunity/cryonics-community-dioxus"
version = "0.7.1-SNAPSHOT"

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }

[features]
default = ["web"]
server = ["dioxus/server"]
web = ["dioxus/web"]
